--- a/styles.css
+++ b/styles.css
@@ -1,68 +1,82 @@
 
-
-body{
- 
-  display:flex;
+body {
+  display: flex;
   flex-direction: column;
   align-items: center;
-font-family: 'poppins', sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 img {
-  width: 148px;
-  height: 118px;
+  width: 158px;
+  height: 128px;
 }
 
-.title {
+/* Estilizando o título pela classe*/
+.titulo {
   font-size: 24px;
   font-weight: bold;
-  color: #29292e;
+  color: #29292E;
 }
-hr {
-  width:105px;
-  height: 2px;
-  background-color: #e559f9;
-  border: none;
 
+hr {
+  width: 105px;
+  height: 2px;
+  background-color: #E559F9;
+  border: none;
 }
 
 #formulario {
   display: flex;
-  flex-direction:column;
+  flex-direction: column;
   margin-top: 80px;
 }
 
-  label{
-    font-weight:bold ;
-    font-size: 16px;
-    color: #29292e ;
-  }
+label {
+  font-size: 16px;
+  font-weight: bold;
+  color: #29292E;
+}
 
-  input{
-    width: 320px;
-    height: 50px;
-    border-radius:8px ;
-    border: 1px,solid#a8a3a3;
-    padding:15px,16px,15px,16px;
+input {
+  width: 320px;
+  border-radius: 8px;
+  border: 1px solid #A8A8B3;
+  padding: 15px 16px 15px 16px;
 
-    font-size: 16px;
-    font-weight:regular;
-    color: #a8a8b3;
-    margin-top: 8px;
-  }
+  font-size: 16px;
+  font-weight: regular;
+  color: #A8A8B3;
+  margin-top: 8px;
+}
 
-  button{
-    background-color: #184680;
-    color: white;
-    padding: 10px;
-    border: nome;
-    border-radius: 8px;
-    font-size: 16px;
-    font-weight: bold;
-    margin-top: 16px;
-  }
+button {
+  background-color: #184680;
+  color: #ffffff;
+  padding: 10px;
+  border: none;
+  border-radius: 8px;
+  font-size: 16px;
+  font-weight: bold;
+  margin-top: 16px;
+}
 
+button:hover {
+  background-color: #002d8d;
+  transform: scale 0.2s;
+  box-shadow: 0 0 0 5px 2px rgb(0,0,0,0.2);
+}
+
+button:active {
+  transform: scale(0.99);
+}
+    div{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 50px;
+        margin-bottom:50px ;
+
+    }
     
-
 
 
